--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,15 +1,9 @@
-<section id="bio">
-  <section id="img-wrapper">
-    <img src="{{site.data.author.dp}}" alt="" />
-  </section>
-  <section id="bio-wrapper">
-    <div id="text-wrapper">{{site.data.author.description}}</div>
-    <div id="social-wrapper">
-      {% for i in site.data.author.contact %}
-      <a href="{{i.url}}" target="_blank">
-        <img src="{{site.baseurl}}/assets/icons/{{i.title}}.png" alt="" />
-      </a>
-      {%endfor%}
+<section>
+  <section>
+    <div class="site-description">
+      Somos una empresa Chilena que brinda servicios de ciberseguridad. Nuestro
+      objetivo es concientizar y preparar a las empresas ante amenazas de
+      ataques cibernéticos que están en constante evolución.
     </div>
   </section>
 </section>
