feat(bio): change text description

--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,9 +1,11 @@
 <section>
   <section>
     <div class="site-description">
-      Somos una empresa Chilena que brinda servicios de ciberseguridad. Nuestro
-      objetivo es concientizar y preparar a las empresas ante amenazas de
-      ataques cibernéticos que están en constante evolución.
+      Somos una empresa chilena de ciberseguridad que concientiza y prepara a
+      las organizaciones ante amenazas cibernéticas en evolución. Ofrecemos
+      soluciones integrales y contamos con profesionales altamente capacitados.
+      Además de proteger la información, nos enfocamos en educación y promovemos
+      una cultura de seguridad en la comunidad.
     </div>
   </section>
 </section>
